--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.1",
     "express-validator": "^7.0.1",
     "firebase-admin": "^11.10.1",
     "jsonwebtoken": "^9.0.1",
