--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,99 +1,3 @@
-# Blog API
-
-This blog API follows the MVC (Model-View-Controller) architecture, uses npm as the package manager, and MongoDB as the database.
-
-# Live Preview
-
-ByteBlogger: https://byteblogger-vipin.netlify.app
-
-- controllers: Contains the logic for handling requests and responses.
-- models: Defines the data models used by the server.
-- uploads: for uploaded files
-- routes: Defines the API routes for different features.
-- server.js: Entry point for the server.
-- .env: Environmental variables file.
-- package.json: NPM package configuration.
-
-## Environmental Variables
-
-- PORT=3000
-- MONGODB_URL=mongodb://localhost:27017/your-database-name
-- SECRET_KEY=your-secret-key
-- STRIPE_KEY=your stripe public key
-
-### Details for .env variable
-
-- PORT: Port on which the server will run.
-- MONGODB_URL: MongoDB connection URL.
-- SECRET_KEY: Secret key for JWT (JSON Web Token) authentication.
-- STRIPE_KEY=your stripe public key
-
-## Installation
-
-### Using Docker
-
-### Adding frontend image to backend compose file
-
-<div align="center">
-<a href="https://github.com/vipinpatidar/ByteBlogger-server-code" target="_blank">
-For using frontend image in docker-compose.yaml file, Go to frontend github repo download or clone it and create a image using it's Dockerfile and docker-compose.yaml files
-</a>
-</div>
-
-<br />
-<br />
-
-#### add a .env file in server directory with environment variables like
-
-      #PORT=3000
-      #MONGODB_URL=your mongodb url
-      #SECRET_KEY=jwt secret key
-      #STRIPE_KEY=your stripe public key
-
-<details>
-<summary><code>Dockerfile</code></summary>
-
-```Dockerfile
-
-ARG NODE_VERSION=20.11.0
-
-FROM node:${NODE_VERSION}-alpine
-
-# Use production node environment by default.
-ENV NODE_ENV production
-
-WORKDIR /app
-
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
-# into this layer.
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=package-lock.json,target=package-lock.json \
-    --mount=type=cache,target=/root/.npm \
-    npm ci --omit=dev
-
-# Run the application as a non-root user.
-USER node
-
-# Copy the rest of the source files into the image.
-COPY . .
-
-# Expose the port that the application listens on.
-EXPOSE 3000
-
-# Run the application.
-CMD npm start
-
-```
-
-</details>
-
-<details>
-<summary><code>docker-compose.yaml</code></summary>
-
-```dockerfile
-
 # specify the version of docker-compose
 version: "3.8"
 
@@ -104,7 +8,7 @@ services:
   web:
     depends_on:
       - server
-    image: <Your frontend image will come here like: frontend-web:latest>
+    image: frontend-frontend:latest
     # specify the ports to expose for the web service
     # the first number is the port on the host machine
     # the second number is the port inside the container
@@ -175,36 +79,3 @@ services:
 # define the volumes to be used by the services
 volumes:
   blogAppDB:
-
-```
-
-</details>
-
-#### Creating Images and container from .yaml file
-
-1.  Running in watch mode
-
-    docker-compose watch
-
-2.  Without watch mode
-
-    docker-compose up
-
-3.  Stop and Remove containers
-
-    docker-compose down
-
-### Using github clone
-
-1. Clone the repository:
-   git clone https://github.com/your-username/your-repo.git
-
-2. Navigate to the project directory:
-   cd your-repo
-
-3. Install dependencies:
-   npm install
-
-## Running the Server
-
-Start the server using the following command: npm start
